Fixed some minor alignment issues on mobile devices

--- a/static/games.css
+++ b/static/games.css
@@ -62,6 +62,7 @@ body {
 .details img {
     height: 400px;
     width: 400px;
+    position: relative;
 }
 
 .details h3 {
@@ -142,14 +143,52 @@ nav a {
 }
 
 
-@media (max-width: 1140px) {
+@media (max-width: 1200px) {
+    .games {
+        flex-direction: column;
+        width: 98%;
+        justify-content: center;
+    }
+    .gamesContainer{
+        width: 96%;
+        margin: 2px;
+        padding: 2px;
+    }
+
+    .details img {
+        height: 12rem;
+        width: 12rem;
+        padding: 0;
+        margin: 0;
+        overflow: clip;
+    }
+
+    .details {
+    width: 100%;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid black;
+    border-radius: 10px;
+    margin: 5px;
+    padding: 1rem;
+    font-size: 3rem;
+    box-shadow: 2px 1px 1px rgba(0, 0, 0, 0.3);
+    overflow: hidden;
+}
+
+}
+
+
+@media (max-width: 480px) {
     .games {
         flex-direction: column;
         width: 95%;
         justify-content: center;
     }
     .gamesContainer{
-        width: 98%;
+        width: 90%;
         margin: 2px;
         padding: 2px;
     }
