--- a/static/style.css
+++ b/static/style.css
@@ -21,9 +21,9 @@ body {
 }
 
 .centerpiece h1{
-    padding: auto;
+    padding: 2px;
     margin: 3px;
-    font-size: 10rem;
+    font-size: 9rem;
     text-align: center;
 }
 
@@ -47,6 +47,8 @@ body {
     border-radius: 5px;
     text-align: center;
     font-weight: bold;
+    padding: 1em;
+    margin: 1em;
 }
 
 .video {
@@ -242,7 +244,7 @@ nav a {
         width: 100%;
     }
     .video{
-        max-width: 950%;
+        max-width: 98%;
     }
 }
 
@@ -326,6 +328,9 @@ nav a {
 }
  
 @media(max-width: 470px){
+    .finalFinalContainer{
+        margin-right: 1rem;
+    }
     .sidebar{
         width: 100%;
         height: 100%;
@@ -337,6 +342,13 @@ nav a {
         height: 20%;
         font-size: 1.5em;
     }
+    .centerpiece h1{
+    padding: 2px;
+    margin: 3px;
+    font-size: 6.5rem;
+    text-align: center;
+}
+
 }
 
 
